--- a/web/roomtypeupdate.html
+++ b/web/roomtypeupdate.html
@@ -1,16 +1,8 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-         pageEncoding="ISO-8859-1"%>
-<% HttpSession sessionad = request.getSession(false);
-    String user = (String) sessionad.getAttribute("username");
-    String rolename = (String) sessionad.getAttribute("rolename");
-%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="ISO-8859-1">
         <title>Accommodation Portal</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
         <style>
             .container{
                 padding-top: 5px;
@@ -73,15 +65,33 @@
     </head>
     <body>
         <div id="mySidenav" class="sidenav">
-             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            
-             <a href="/index/admin">Home</a>
-             <a href="logout">Logout</a>
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+            <a href="/index/admin">Home</a>
+            <a href="logout">Logout</a>
         </div>
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+        <div id="main">
+            <div class="col-md-12 container "style="height:700px">
+                <div class="card" >
+                    <div class="card-body">
+                        <div class="list-part">
+                            <h4 class="card-title">Edit Room Type</h4>
 
+                            <div class="inner-list-part d-flex">
+                                <form class="form-inline my-2 my-lg-0"  action="admin"  method="get">
+                                    <button class="btn btn-danger my-2 my-sm-0" type="submit">Cancel</button>
+                                </form>
+                            </div>
+                        </div>
+                        <form action="roomtypeupdate" method="post" id="rootypeeditform">
+                            
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
-
 </html>
 <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -95,4 +105,31 @@
                 document.getElementById("mySidenav").style.width = "0";
                 document.getElementById("main").style.marginLeft = "0";
             }
+            function getUrlParameter(sParam) {
+                var sPageURL = window.location.search.substring(1),
+                    sURLVariables = sPageURL.split('&'),
+                    sParameterName,
+                    i;
+
+                for (i = 0; i < sURLVariables.length; i++) {
+                    sParameterName = sURLVariables[i].split('=');
+
+                    if (sParameterName[0] === sParam) {
+                        return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+                    }
+                }
+            };
+             $(document).ready(function () {
+                 var id = getUrlParameter('id');
+                $.ajax({
+                    url: 'http://localhost:8080/index/datarender?datatype=updateroomtype&&id='+id,
+                    type: 'GET',
+                    dataType: "html",
+                    success: function (responseText) {
+                        $('#rootypeeditform').append(responseText);
+                    },
+                    error: function (request, status, error) {
+                    }
+                });
+            });
 </script>
